fix: inline avatar image align

--- a/static/css/rtcbox.css
+++ b/static/css/rtcbox.css
@@ -655,11 +655,16 @@
 	align-items: center;
 	justify-content: center;
 }
-.wrtc_box .wrtc_contentBody .wrtc_content li .avatar img,
+/* .wrtc_box .wrtc_contentBody .wrtc_content li .avatar img,
 .wrtc_inlineAvatars .avatar img{
 	width: auto;
 	height: 100%;
 	border-radius: 50%;
+} */
+.wrtc_box .wrtc_contentBody .wrtc_content li .avatar > div,
+.wrtc_inlineAvatars .avatar > div{
+	width: 100%;
+	height:100%;
 }
 
 .wrtc_box .wrtc_contentBody .wrtc_content ul {
